@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-30 18:28:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-65
+
+    Summary:
+      catalog, fix indexing
+    Revision:
+      itools--main--0.9--patch-65
+
+
+    modified files:
+     Changelog catalog/IIndex.py
+
+
 2005-05-29 12:56:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-64
 
     Summary:
